tablet featrures list gap fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -563,7 +563,7 @@ header {
   .features {
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 72px 24px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
